# search-engine

./: CMakeLists.txt  ConverterJSON.cpp  ConverterJSON.h  EngineExceptions.cpp  EngineExceptions.h  ReadMe.md  version.h
config/: config.json  requests.json
include/: ConverterJSON.h  EngineExceptions.h  InvertedIndex.h  SearchServer.h
resources/: file001.txt  file002.txt  file003.txt  file004.txt  file005.txt  file006.txt
src/: CMakeLists.txt  ConverterJSON.cpp  EngineExceptions.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
tests/: CMakeLists.txt  InvertedIndexTests.cpp  SearchServerTests.cpp  test.cpp
